--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -89,7 +89,7 @@ height="3.528in"}
 
 ### 2.1 San Jorge Gulf
 
-San Jorge Gulf is the northernmost study area considered in this review (Figure 1), located from Cabo dos Bahias (44°55'S) to Cabo tres Puntas (47°06'S). It is a partially enclosed basin spanning approximately 34,000 km^2 and ~100 m of maximum depths. The gulf’s productivity supports large invertebrate and vertebrate fisheries [@Gongora2012], as well as marine mammal and seabird populations [@Yorio2009]. Two prominent frontal systems meet in the shallower northern and southern ends of the gulf (with depths ~40 m), which are also the places of highest productivity [@Glembocki2015].
+San Jorge Gulf is the northernmost study area considered in this review (Figure 1), located from Cabo dos Bahias (44°55'S) to Cabo tres Puntas (47°06'S). It is a partially enclosed basin spanning approximately 34,000 $\text{km}^2$ and ~100 m of maximum depths. The gulf’s productivity supports large invertebrate and vertebrate fisheries [@Gongora2012], as well as marine mammal and seabird populations [@Yorio2009]. Two prominent frontal systems meet in the shallower northern and southern ends of the gulf (with depths ~40 m), which are also the places of highest productivity [@Glembocki2015].
 
 The San Jorge Gulf food web contains 165 nodes (trophospecies) and 1015 trophic interactions with a connectance of 0.04. The percentage of top predators is 16%, 78% of the nodes are intermediate and 6% are basal; 60% of the consumers are omnivorous (Table 1). The most connected nodes are the Argentine red shrimp *Pleoticus muelleri*, the squat lobster *Gimothea gregaria*, squids (*Illex argentinus* as dominant species), and Amphipoda. Notably, these nodes are positioned at mid-trophic levels in the food web (3, 2.5, 3.6, and 2, respectively) [@Funes2022].
 
@@ -99,18 +99,18 @@ Finally, the gulf is exposed to urban and industrial pollution [@Verga2020]. In 
 
 ### 2.2 Beagle Channel
 
-Located at a more southern latitude (~54ºS, 68ºW), the Beagle Channel (Figure 1) is an interoceanic passage at the southernmost tip of South America, spanning 240 km in length and 5 km in width (~1200 km^2), with a depth range of 0 - 140 m. It features complex coastlines, varying bathymetry, a prevailing west-to-east circulation pattern, and a significant longitudinal gradient of glacial freshwater discharge [@Schloss2023]. @Bruno2023 suggests that locally produced suspended particulate organic matter (mostly composed of phytoplankton) and organic matter accumulated in the sediments (macroalgae-originated detritus) are the primary food sources for the marine ecosystem, as opposed to allochthonous materials.
+Located at a more southern latitude (~54ºS, 68ºW), the Beagle Channel (Figure 1) is an interoceanic passage at the southernmost tip of South America, spanning 240 km in length and 5 km in width (~1200 $\text{km}^2$), with a depth range of 0 - 140 m. It features complex coastlines, varying bathymetry, a prevailing west-to-east circulation pattern, and a significant longitudinal gradient of glacial freshwater discharge [@Schloss2023]. @Bruno2023 suggests that locally produced suspended particulate organic matter (mostly composed of phytoplankton) and organic matter accumulated in the sediments (macroalgae-originated detritus) are the primary food sources for the marine ecosystem, as opposed to allochthonous materials.
 
 The Beagle Channel food web includes 145 nodes and 1115 trophic interactions with a connectance of 0.05 (Table 1). This food web is hypothesized to have a wasp-waist structure (i.e., the structure and dynamics of the ecosystem are regulated primarily by mid-trophic level species), where the following species play a crucial role in the dynamics of the ecosystem: Fueguian sprat *Sprattus fuegensis*, longtail southern cod *Patagonotothen ramsayi*, black southern cod *P. tessellata*, frogmouth *Cottoperca trigloides*, and squat lobster *G. gregaria* [@Riccialdelli2020]. Moreover, the squat lobster has been identified as a species linking food web modules and connecting the entire food web [@Rodriguez2022].
 
-A main local stressor in the Beagle Channel is the introduction of invasive species (Table 2). Salmonidae were introduced to Tierra del Fuego in the 1930s. Especially, the Chinook salmon *Oncorhynchus tshawytscha* causes concern. The detection of this species in Tierra del Fuego dates back to April 2006, and its population has been expanding since then [@Nardi2019]. Being a top predator, the Chinook salmon can compete for resources with several native predators in the Beagle Channel [@Correa2008], but also prey on them. This is the case for Notothenioids (*Eleginops maclovinus*, *Patagonotothen tessellata*, *P. cornucola*, *P. sima*, *Paranotothenia magellanica*, *Harpagifer bispinis*), the Atherinidae *Odontesthes smitti* and *O. nigricans*, the Fuegian sprat, and larvae of king crabs (*Lithodes antarcticus* and *Paralomis granulosa*) [@Fernandez2010]. @Ciancio2008 observed that Chinook salmon primarily feeds on sprats in the Southern Patagonian Shelf Ecosystem area and display trophic levels comparable to those of intermediate-sized fish and cephalopod predator species, showing significant dietary overlap with the Magellanic penguin *Spheniscus magellanicus*. Another potential competitor for Chinook salmon in the Beagle Channel, sharing a similar diet, is the native Commerson's dolphin *Cephalorhynchus commersonii* [@Riccialdelli2013].
+One of the main local stressors in the Beagle Channel is the introduction of invasive species (Table 2). Salmonidae were introduced to Tierra del Fuego in the 1930s. Especially, the Chinook salmon *Oncorhynchus tshawytscha* causes concern. The detection of this species in Tierra del Fuego dates back to April 2006, and its population has been expanding since then [@Nardi2019]. Being a top predator, the Chinook salmon can compete for resources with several native predators in the Beagle Channel [@Correa2008], but also prey on them. This is the case for Notothenioids (*Eleginops maclovinus*, *Patagonotothen tessellata*, *P. cornucola*, *P. sima*, *Paranotothenia magellanica*, *Harpagifer bispinis*), the Atherinidae *Odontesthes smitti* and *O. nigricans*, the Fuegian sprat, and larvae of king crabs (*Lithodes antarcticus* and *Paralomis granulosa*) [@Fernandez2010]. @Ciancio2008 observed that Chinook salmon primarily feeds on sprats in the Southern Patagonian Shelf Ecosystem area and display trophic levels comparable to those of intermediate-sized fish and cephalopod predator species, showing significant dietary overlap with the Magellanic penguin *Spheniscus magellanicus*. Another potential competitor for Chinook salmon in the Beagle Channel, sharing a similar diet, is the native Commerson's dolphin *Cephalorhynchus commersonii* [@Riccialdelli2013]. In invaded ecosystems, predation emerges as the primary driver of significant damage, often leading to cascading effects impacting even primary producers [@David2017].
 In the Beagle Channel, other stressors include contaminants like metals, perfluorinated compounds, hydrocarbons, and microplastics found in animal tissue (algae, mussel, fish, and guano) and sediments [@Duarte2011; @Llorca2012]. Carbon and carbohydrate levels in Ushuaia Bay's (54°48′S, 68°18′W) surface sediments are similar to hypertrophic ecosystems (i.e., greater input of nutrients than an eutrophic situation), along with hydrocarbons and heavy metals linked to port and industrial activities [@Gil2011; @Commendatore2012]. @Ferreira2021 showed that the black southern cod in Ushuaia Bay may be exposed to endocrine-disrupting compounds from urban and industrial pollution.
 Moreover, @Perez2020 and @Ojeda2021 found microplastics in the Chilean mussel *Mytilus chilensis* and the sea snail *Nacella magellanica*, respectively. These studies link pollutants to port and industrial activities of Ushuaia; we therefore expect the area of the Beagle Channel closest to the city to be the most affected by contaminants. 
-Contaminants potentially spread through the food web, magnifying the risk to higher trophic level taxa. In the Beagle Channel and Atlantic coast of Tierra del Fuego food webs mercury concentrations rose with benthivory, and higher mercury was found in phytoplankton and the squat lobster. This latter species connects pelagic and benthic habitats, so any disruption to them could disrupt the food web [@Rodriguez2022]. @Dodino2022 found the highest mercury levels in Magellanic penguin feathers from offshore colonies in Tierra del Fuego. Recently, Ushuaia's kelp forests have also seen changes in composition along with a decrease in biodiversity as a result of urban pollution [@Kaminsky2024]. It is important to note that sea warming might be a less significant stressor in the Beagle Channel compared to the other areas, as global warming is melting glaciers and the influx of cold freshwater is actually slightly cooling the seawater [@Saraceno2022].
+Contaminants potentially spread through the food web, from lower to higher trophic level taxa. In the Beagle Channel and Atlantic coast of Tierra del Fuego food webs mercury concentrations rose with benthivory, and higher mercury was found in phytoplankton and the squat lobster. This latter species connects pelagic and benthic habitats, so any disruption to them could disrupt the food web [@Rodriguez2022]. @Dodino2022 found the highest mercury levels in Magellanic penguin feathers from offshore colonies in Tierra del Fuego. Recently, Ushuaia's kelp forests have also seen changes in composition along with a decrease in biodiversity as a result of urban pollution [@Kaminsky2024]. It is important to note that sea warming might be a less significant stressor in the Beagle Channel compared to the other areas, as global warming is melting glaciers and the influx of cold freshwater is actually slightly cooling the seawater [@Saraceno2022].
 
 ### 2.3 Burdwood Bank
 
-The so-called Burdwood Bank ecosystem comprises Marine Protected Areas Namuncurá - Burdwood Bank I and II (~54ºS, 59ºW), meaning the shallow submarine plateau named Burdwood Bank with a 200 m isobath boundary, and a deep slope that reaches 4000 m in depth, respectively [@APN2022] (Figure 1). Physical features in the plateau are fairly stable, with salinity averaging 34 all year round and temperature ranging between 4 and 8ºC [@Acha2004]. The plateau is surrounded by steep flanks of up to 4000 m depth, protected by the Marine Protected Area Namuncurá - Burdwood Bank II (32,000 km^2). Intense upwelling and mixing occur in relation to the slope, entraining deep nutrient-rich waters into the photic layer [@Matano2019], and resulting in a fairly homogeneous water column both spatially and temporally [@Matano2019].
+The so-called Burdwood Bank ecosystem comprises Marine Protected Areas Namuncurá - Burdwood Bank I and II (~54ºS, 59ºW), meaning the shallow submarine plateau named Burdwood Bank with a 200 m isobath boundary, and a deep slope that reaches 4000 m in depth, respectively [@APN2022] (Figure 1). Physical features in the plateau are fairly stable, with salinity averaging 34 all year round and temperature ranging between 4 and 8ºC [@Acha2004]. The plateau is surrounded by steep flanks of up to 4000 m depth, protected by the Marine Protected Area Namuncurá - Burdwood Bank II (32,000 $\text{km}^2$). Intense upwelling and mixing occur in relation to the slope, entraining deep nutrient-rich waters into the photic layer [@Matano2019], and resulting in a fairly homogeneous water column both spatially and temporally [@Matano2019].
 
 The Burdwood Bank food web comprises 379 nodes and 1788 interactions, with a connectance of 0.01, and an asymmetric degree distribution (i.e. most of the species have a relatively low number of interactions and few species concentrate most of them). Almost half of the consumers are omnivores (48%), and the network displays a small-world pattern [@Marinainrev] (Table 1). This network pattern implies a rapid spread of a perturbation (e.g., contaminant, population fluctuation, local extinction) throughout the food web due to a short distance among species but, at the same time, a greater resistance caused by the confinement of perturbations mainly within subnetworks as a result of a high clustering coefficient [@Bornatowski2017; @Dormann2017].
 
@@ -121,19 +121,19 @@ Despite evidence of warming of surface, mid-water and bottom layers (100 m) in B
 
 ### 2.4 Scotia Sea
 
-The Scotia Sea is a deep-sea basin (~48 - 58ºS, 50ºW), delimited by the Drake Passage to the West and by the island complex of the Scotia Arc to the North, East, and South, with an approximate extension of 1.5 x 106 km^2 and a depth range of 0 - 3000 m [@Murphy2006] (Figure 1). Its oceanography is dominated by the Antarctic Circumpolar Current, which is spatially structured by frontal systems [@Whitworth1980]. The South Antarctic Circumpolar Current Front subdivides the Scotia Sea into two biogeographic regions: the Northern Scotia Sea, characterized by higher and more variable temperatures, and the Southern Scotia Sea, characterized by lower and more stable temperatures and influenced by seasonal sea ice [@Raymond2011].
+The Scotia Sea is a deep-sea basin (~48 - 58ºS, 50ºW), delimited by the Drake Passage to the West and by the island complex of the Scotia Arc to the North, East, and South, with an approximate extension of 1.5 x 106 $\text{km}^2$ and a depth range of 0 - 3000 m [@Murphy2006] (Figure 1). Its oceanography is dominated by the Antarctic Circumpolar Current, which is spatially structured by frontal systems [@Whitworth1980]. The South Antarctic Circumpolar Current Front subdivides the Scotia Sea into two biogeographic regions: the Northern Scotia Sea, characterized by higher and more variable temperatures, and the Southern Scotia Sea, characterized by lower and more stable temperatures and influenced by seasonal sea ice [@Raymond2011].
 
 Analysis of the Northern and Southern Scotia Sea food webs shows that the former is relatively more complex in terms of number of species and links than the latter: with more species richness (218 vs 192) and interactions (10008 vs 7241) and a slightly higher connectance (0.21 vs 0.20). Mean path length is shorter in the Northern Scotia Sea food web, whereas the Southern Scotia Sea network displays a greater proportion of omnivores and a lower mean trophic level [@Lopez-Lopez2022] (Table 1).
 
 The Scotia Sea is a vast and heterogenous oceanic region, where especially the zone around South Georgia island represent an area of interest, here referred to as ‘Northern Scotia Sea’. The majority of studies analyzing the stressors’ effects come from this area (e.g., @Murphy2007; @Whitehouse2008; @Trathan2023) (Table 2).
-The main stressor of the Scotia Sea is commercial fisheries. Krill fishery on *Euphausia superba* not only impacts the targeted species, but also the many predators that depend on it as a food source [@Hilborn2017]. Yet, data currently available from monitoring of krill and its predators remain insufficient, hence identifying the potential fishery impacts on the ecosystem is difficult [@Trathan2021]. Apart from krill fishery, two other commercial fisheries operate in the Scotia Sea, targeting Patagonian toothfish species *D. eleginoides* and *Dissostichus mawsoni*. The *D. eleginoides* stock is linked to the stock at South Georgia (‘Northern Scotia Sea’) [@Collins2010], while the *D. mawsoni* stock is linked to the Antarctic continental shelf (‘Southern Scotia Sea’) [@Soeffker2022]. Recently, @Trathan2023 has identified several concerns regarding aspects of these fisheries, highlighting that it is crucial to recognize ongoing changes such as the recovery of baleen whales and climate change. These factors increase uncertainty for fisheries managers, necessitating direct consideration in the management of harvested and dependent species.
+The main stressor of the Scotia Sea is commercial fisheries. Krill fishery on *Euphausia superba* not only impacts the targeted species, but also the many predators that depend on it as a food source [@Hilborn2017]. Yet, data currently available from monitoring of krill and its predators remain insufficient, hence identifying the potential fishery impacts on the ecosystem is difficult [@Trathan2021]. Apart from krill fishery, two other commercial fisheries operate in the Scotia Sea, targeting Patagonian toothfish species *D. eleginoides* and *Dissostichus mawsoni*. The *D. eleginoides* stock is linked to the stock at South Georgia (‘Northern Scotia Sea’) [@Collins2010], while the *D. mawsoni* stock is linked to the Antarctic continental shelf (‘Southern Scotia Sea’) [@Soeffker2022]. Recently, @Trathan2023 has identified several concerns regarding aspects of these fisheries, highlighting that it is crucial to recognize ongoing changes such as the recovery of baleen whales and climate change. These factors increase the uncertainty for fishery managers, necessitating direct consideration in the management of harvested and dependent species.
 
 The Scotia Sea has experienced one of the largest levels of warming within the polar regions [@Whitehouse2008]. Together with the Southern Annular Mode anomalies, this has caused a long-term decrease in krill abundance; more pronounced in the northern than in the southern Scotia Sea [@Murphy2007]. Over the past 90 years, the Antarctic krill *E. superba* also showed an increase in mean body length [@Atkinson2019], likely altering predator-prey interactions. Moreover, it allows krill to reach colder feeding grounds near the seabed, with the potential to link krill to unexpected predators such as demersal fish [@Schmidt2011]. Because of warming, the krill distribution has shifted southward [@Atkinson2019], changing the food web from a krill-based to a non-krill-based, where myctophid fish and squid are playing important roles as key species in a wasp-waist controlled system [@Saunders2019]. While the krill distribution has shifted southward, the most abundant calanoid copepods have maintained their distribution [@Tarling2018].
 Mercury transfer and biomagnification are current processes occurring in the Scotia Sea, where the total concentration of contaminants increase with trophic level and are highest in notothenioid and myctophid fish (e.g. *D. eleginoides*, *Gymnoscopelus nicholsi*), and seabirds [@Seco2021]. During years of low Antarctic krill abundance, predators must deal with both the stress of reduced prey availability and the concurrent rise in mercury exposure [@Seco2021].
 
 ### 2.5 Potter Cove (Antarctica)
 
-In the Antarctic realm, Potter Cove is a ~9 km2 fjord with a depth range of 0 - 200 m located at 25 de Mayo/King George Island (62°S, 58°W) on the South Shetland Islands of the West Antarctic Peninsula (Figure 1). The cove, bordered by the Fourcade Glacier, is divided into three areas: a) the internal cove, a high glacier-influenced, soft sediment zone with a 50 m maximum depth; b) the central cove, a mixed substrate area with low meltwater influence and an 80 m maximum depth; and c) the external cove, ice-free for 60 years with a 185 m maximum depth and rocky substrate [@Jerosch2018]. Potter Cove's high-latitude location results in variable environmental conditions due to photoperiod length seasonality. Sea ice often covers this area in winter [@Schloss2012]. With low phytoplankton biomass, macroalgae, and microphytobenthos are likely the primary food sources for secondary benthic production [@Quartino2008].
+In the Antarctic realm, Potter Cove is a ~9 $\text{km}^2$ fjord with a depth range of 0 - 200 m located at 25 de Mayo/King George Island (62°S, 58°W) on the South Shetland Islands of the West Antarctic Peninsula (Figure 1). The cove, bordered by the Fourcade Glacier, is divided into three areas: a) the internal cove, a high glacier-influenced, soft sediment zone with a 50 m maximum depth; b) the central cove, a mixed substrate area with low meltwater influence and an 80 m maximum depth; and c) the external cove, ice-free for 60 years with a 185 m maximum depth and rocky substrate [@Jerosch2018]. Potter Cove's high-latitude location results in variable environmental conditions due to photoperiod length seasonality. Sea ice often covers this area in winter [@Schloss2012]. With low phytoplankton biomass, macroalgae, and microphytobenthos are likely the primary food sources for secondary benthic production [@Quartino2008].
 
 The Potter Cove food web includes 110 nodes and 649 interactions, and a connectance of 0.05 (Table 1). It presents an asymmetric degree distribution and a modular structure, i.e., groups of species interact more strongly with each other within modules than with species belonging to other modules [@Rodriguez2022].
 
@@ -151,7 +151,6 @@ In the Weddell Sea, the main stressors are related to warming impacts (sea warmi
 Many higher trophic level species in the Weddell Sea are greatly impacted by sea ice reductions due to loss of habitat and food source availability, such as the Antarctic petrel *Thalassoica antarctica* - one of the most abundant seabirds in the Weddell Sea [@Orgeira2021]. Other impacted sea bird species are the emperor penguin *Aptenodytes forsteri*. Reductions in sea ice constrain its population as evidenced by recent observations in the Bellingshausen Sea region [@Fretwell2023]. The Arctic tern *Sterna paradisaea* spends the summer in the Weddell Sea exploiting krill swarms under receding ice edges. Thus, continued warming is expected to gradually erode the abundance and distribution of marine seabirds in the Weddell Sea [@Orgeira2021]. Many marine mammals depend on for breeding and foraging such as the Weddell and Crabeater seals (*Leptonychotes weddellii* and *Lobodon carcinophagus*) [@Wege2021] and the Humpback whale. Reduced sea ice can significantly affect the breeding success of seals [@Wege2021] and body condition of whales [@Turner2020].
 Notothenioid fish, with *Pleuragramma antarcticum* being the most abundant species, confront numerous stressors such as sea warming, sea ice decline, and ocean acidification, posing significant threats to their survival. While certain species exhibit physiological plasticity to cope with increased oxygen demand, most notothenioid fish are stenothermal and incapable of adjusting their metabolic functioning [@Mintenbeck2012]. Projections suggest that the preferred thermal habitat of the Antarctic toothfish, *Dissostichus mawsoni*, an important fish species in the Weddell Sea ecosystem, may contract over the next three decades, underscoring the potential impact of global warming on these species [@Constable2014].
 Iceberg scouring is a major factor in driving the high biodiversity of benthic communities in the Weddell Sea [@Gutt2001]. Even at 600 m depths, iceberg scouring has a strong effect on the benthic environment, disrupting the upper layers of the seabed and removing macrofauna. This patchy disturbance and distribution pattern occurs roughly every 200 square meters on the Antarctic continental shelf. Global warming is predicted to increase iceberg scouring frequency [@Gutt2001a; @Smale2008a], disrupting the environment [@Smale2008] with the potential for tipping points  [@Gutt2015].
-________________
 
 \newpage
 \footnotesize
@@ -177,9 +176,6 @@ Weddell Sea           490         16041       0.07              2.19            
 ----------------------------------------------------------------------------------------------------------------------------------------------
 
 \normalsize
-
-
-
 ## 3. From species’ stressors to food web effects: a qualitative approach
 
 A major challenge in contemporary ecology lies in predicting the effects of stressors on complex multispecies systems, such as food webs. Network analysis has proved to be a powerful tool to tackle this issue, since it can capture the effects of individual and multiple stressors on communities and ecosystems [@Montoya2009; @OGorman2012; @Bruder2019].
@@ -275,15 +271,16 @@ In the middle of the latitudinal gradient considered in this study, the Scotia S
 
 #### 3.1.3 Potter Cove (Antarctica)
 
-In Potter Cove, a fjord-like Antarctic ecosystem, the repercussions of climate change extend across numerous species. Noteworthy, these effects are non-uniform within the food web, manifesting differently across its various compartments [@Cordone2020; @Rodriguez2022]. Potter Cove has recently experienced frequent events of marine heatwaves, i.e., prolonged periods of anomalously high sea surface temperature [@Oliver2018; @Latorre2023]. This has led to decreases in biomasses of different planktonic functional groups [@Garcia2019; @Latorre2023]. Given the relatively low abundance of phytoplankton and zooplankton’s low mean degree, resulting in weak interaction strengths between these low trophic levels and higher ones [@Rodriguez2024], added to the modular configuration of the food web [@Rodriguez2022], we hypothesize that changes in these nodes due to warming will be retained at the basal level of the pelagic compartment and will not expand to higher trophic levels.
-Benthic primary producers in Potter Cove are being influenced by the decrease in winter sea ice cover (higher light availability), the increased levels of sediments in the water column due to glacial melt run-off (lower light penetration) and the newly free-ice areas available for colonization associated to glacier retreat. The overall local effect of climate change on macroalgae is a net increase in their production [@Deregibus2023]. It has been proposed that larger diversity in primary producers can support a more diverse food web with more specialized consumers [@Iken2023].  Given the high relative abundance and the high degree of the macroalgae functional group (Table S1), we expect a longer hard bottom food web (i.e., number of interactions connecting low and high-trophic levels), wider consumer trophic niches, and a more stable benthic food web as sea ice cover decreases and glaciers retreat due to global warming.
-In soft bottom areas of the cove, multiple food web nodes are being affected by ongoing warming effects: decrease in net primary production of benthic microalgae [@Hoffmann2019], and changes in the benthic community biomass, distribution and composition [@Sahade2015; @Pasotti2015]. Given that the Potter Cove food web has low connectance and omnivory, we suggest fragility and potential trophic cascade effects [@Marina2018], especially between species of the soft bottom compartment (Table 3).
-Overall, we anticipate significant shifts in energy fluxes, rather than alterations in the overall structure of the Potter Cove food web, with strengthening of connections within compartments.
+In Potter Cove, a fjord-like Antarctic ecosystem, the repercussions of climate change extend across numerous species. Noteworthy, these effects are non-uniform within the food web, manifesting differently across its pelagic and benthic compartments.
+Potter Cove has recently experienced frequent events of marine heatwaves, i.e., prolonged periods of anomalously high sea surface temperature [@Oliver2018; @Latorre2023]. This has led to decreases in biomasses of different planktonic functional groups [@Garcia2019; @Latorre2023]. Given the relatively low abundance of phytoplankton and zooplankton low mean degree (Table S1), resulting in weak interaction strengths between these low trophic levels and higher ones [@Rodriguez2024], added to the modular configuration of the food web [@Rodriguez2022], we hypothesize that changes in these nodes due to warming will be retained at the lower trophic levels of the pelagic compartment and will not expand to higher trophic levels.
+Macroalgae, important benthic primary producers, are being influenced by the decrease in winter sea ice cover (higher light availability), the increased levels of sediments in the water column due to glacial melt run-off (lower light penetration) and the newly free-ice areas available for colonization associated to glacier retreat. The local effect of climate change on macroalgae is a net increase in their production and macroalgal detritus [@Deregibus2023; @Iken2023; @Braeckman2019]. On the other hand, increased glacial runoff lead to a decrease in net primary production of benthic microalgae [@Hoffmann2019]; reduced secondary benthic production; changes on the benthic community composition and an expansion of its distribution towards newly free-ice areas, specially filter and deposit feeders species [@Braeckman2024; @Sahade2015; @Pasotti2015]. In an increasing glacial melt disturbance scenario, it’s expected a shift in the food sources of benthic species towards grazing on macroalgal and their detritus [@Braeckman2024]. 
+It has been proposed that larger diversity in primary sources can support a more diverse food web with more specialized consumers [@Iken2023]. Given the high relative abundance and the high degree of the macroalgae functional group (Table S1), we expect a longer benthic food web (i.e., number of interactions connecting low and high-trophic levels), wider consumer trophic niches, meaning an increase in omnivory, and a more stable benthic food web as sea ice cover decreases and glaciers retreat due to global warming.
+As a net effect of climate change on the overall Potter Cove food web, we expect a significant shift in energy fluxes, rather than drastic alterations in the topological structure, affecting the transfer of energy from lower to higher trophic levels.
 
 #### 3.1.4 Weddell Sea (Antarctica)
 
 In the southernmost food web, the Weddell Sea, the main effect of global warming is the decrease in sea ice extent, with reported anomalies in the past summer seasons [@Fretwell2023]. Declining sea ice extent has reduced the abundance of krill [@Atkinson2004; @Flores2012], and produced an increase in phytoplankton productivity [@Isla2023; @Pinkerton2021], altering the plankton community structure, and benefiting cryptophytes over diatoms [@Lin2021]. Moreover, habitat loss from sea ice decline will reduce the foraging success and breeding sites of seabirds (e.g., snow petrel *P. nivea* and emperor penguin), decreasing their population biomassess and modifying their distributions.
-The projected rise in iceberg scouring is expected to significantly alter the biomass and community structure of macrobenthos, which in turn will impact mid-trophic level predators such as demersal fish [@Gutt2001a; @Mintenbeck2012]. While we do not anticipate large-scale topological changes in the mean food web attributes, local extinctions could lead to such changes, particularly affecting benthic species [@Gutt2003]. Given that the impacted species—whether individually like krill, or collectively like macrobenthos and notothenioids (e.g., *P. antarcticum*)—present a mid-trophic position, high population biomasses and high degree (Table S1), we hypothesize that significant shifts in energy fluxes will occur (Table 3). Additionally, the food web's low proportion of omnivores suggests reduced system resilience (Table 1), increasing the likelihood of regime changes [@Gutt2015].
+The projected rise in iceberg scouring is expected to significantly alter the biomass and community structure of macrobenthos, which in turn will impact mid-trophic level predators such as demersal fish [@Gutt2001a; @Mintenbeck2012]. While we do not anticipate large-scale topological changes affecting mean food web attributes, local extinctions may produce changes in the interactions, especially impacting benthic species [@Gutt2003]. Given that the impacted species—whether individually like krill, or collectively like macrobenthos and notothenioids (e.g., *P. antarcticum*)—present a mid-trophic position, high population biomasses and high degree (Table S1), we hypothesize that significant shifts in energy fluxes will occur (Table 3). Additionally, the food web's low proportion of omnivores suggests reduced system resilience (Table 1), increasing the likelihood of regime changes [@Gutt2015].
 
 #### 3.1.5 Beagle Channel and Burdwood Bank
 
@@ -298,8 +295,8 @@ reported for each study area. \*Industrial trawl fishery ceased in 2015 remainin
 activity.
 
 +-----------------------+----------------------+-----------------------+
-| **Study area**        | **Stressor**         | **Hypothesis on food web effects**  |
-|                       |                      |                       |
+| **Study area**        | **Stressor**         | **Hypothesis on food  |
+|                       |                      |       web effects**   |
 +=======================+======================+=======================+
 | **San Jorge Gulf**    |                      |                       |
 +-----------------------+----------------------+-----------------------+
@@ -349,15 +346,8 @@ activity.
 |                       | Sea warming          | ↓ perturbation        |
 |                       |                      | spreading             |
 +-----------------------+----------------------+-----------------------+
-|                       | Sea ice decline +    | Differential impacts, |
-|                       | glacial retreat      | by substrate: hard    |
-|                       |                      | (HS) or soft (SS)     |
-|                       |                      |                       |
-|                       |                      | ↑ FW chain length & ↑ |
-|                       |                      | trophic niches (HS)   |
-|                       |                      |                       |
-|                       |                      | ↑ FW fragility &      |
-|                       |                      | trophic cascades (SS) |
+|                       | Sea ice decline +    | ↑ FW chain length & |
+|                       | glacial retreat      | ↑ trophic niches    |
 +-----------------------+----------------------+-----------------------+
 | **Weddell Sea         |                      |                       |
 | (Antarctica)**        |                      |                       |
@@ -384,11 +374,11 @@ Regarding knowledge and data gaps on species and their stressors, especially the
 
 Analyzing the impact of multiple stressors through observational studies is challenging [@Gutt2021]. This complexity arises partly because of the potential for antagonistic effects, where impacts cancel each other out, or synergistic effects, where the combined impact is greater than the sum of individual effects [@Boyd2015; @Cote2016]. Moreover, these interactive effects are complicated to handle in the framework of complex food webs. The number of pathways through which a species may affect or be affected by other species, and through which stressors may permeate communities, increases exponentially with the number of species and interactions in a network [@Menge1995]. To tackle this complexity, @Beauchesne2021 developed a theory-grounded approach using motifs (i.e. groups of species that, when put together, construct whole food webs) to simplify food webs; a methodology that could be applied to our food web study cases.
 
-In this review, we proposed a series of alternative hypotheses on how global stressors may affect food webs in the Southwest Atlantic to Southern Ocean. Despite being qualitative, this is a first important step in synthesizing food webs and stressor effects on food webs for this region. These qualitative assessments must be complemented with further investigations that test their validity. To achieve this, we suggest using a combination of observational data such as reported biomass changes and historic records of sea temperature for the region [e.g., @Laptikhovsky2013; @Funes2019; @Franco2020a; @Winter2023], and food web modeling methods such as stressor-response matrices (@Bracewell2019) and flux modeling (e.g., @Gauzens2019; @Beauchesne2021; @Polazzo2022).
+In this review, we proposed a series of alternative hypotheses on how global stressors may affect food webs in the Southwest Atlantic to Southern Ocean. Despite being qualitative, this is a first important step in synthesizing food webs and stressor effects on species and food webs for this region. These qualitative assessments must be complemented with further investigations that test their validity. To achieve this, we suggest using a combination of observational data such as reported biomass changes and historic records of sea temperature for the region [e.g., @Laptikhovsky2013; @Funes2019; @Franco2020a; @Winter2023], and food web modeling methods such as stressor-response matrices (@Bracewell2019) and flux modeling (e.g., @Gauzens2019; @Beauchesne2021; @Polazzo2022).
 
 ## 5. Conclusions
 
-We reviewed  global change stressors acting in six different areas along a large-scale latitudinal gradient from temperate Atlantic to cold Antarctic ecosystems. Using a theoretical framework that combines species and food web-level data, we suggest how warming effects may impact food web structure and functioning. Besides there is an important amount of uncertainty, these qualitative predictions are intended to serve as the basis for future studies in marine ecosystems of the Southern Hemisphere that aim at quantifying the magnitude of these stressors and how they are affecting quantitative food web properties, such as energy fluxes and stability. There is an urgent need to assess these changes using a holistic and quantitative framework where the magnitude of stressors and species interactions are taken into account.
+We reviewed global change stressors acting in six different areas along a large-scale latitudinal gradient from temperate Atlantic to cold Antarctic ecosystems. Using a theoretical framework that combines species and food web-level data, we suggest how warming effects may impact food web structure and functioning. Apart from an important amount of uncertainty, these qualitative predictions are intended to serve as the basis for future studies in marine ecosystems of the Southern Hemisphere that aim at quantifying the magnitude of these stressors and how they are affecting quantitative food web properties, such as energy fluxes and stability. There is an urgent need to assess these changes using a holistic and quantitative framework where the magnitude of stressors and species interactions are taken into account.
 
 ## Acknowledgements
 
