--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -520,6 +520,23 @@
   file = {/Users/leonardosaravia/Zotero/storage/VV8JWXBM/S004896971931513X.html}
 }
 
+@article{Braeckman2019,
+  title = {Degradation of Macroalgal Detritus in Shallow Coastal {{Antarctic}} Sediments},
+  author = {Braeckman, U. and Pasotti, F. and V{\'a}zquez, S. and Zacher, K. and Hoffmann, R. and Elvert, M. and Marchant, H. and Buckner, C. and Quartino, M. L. and M{\'a}c Cormack, W. and Soetaert, K. and Wenzh{\"o}fer, F. and Vanreusel, A.},
+  year = {2019},
+  month = jul,
+  journal = {Limnology and Oceanography},
+  volume = {64},
+  number = {4},
+  pages = {1423--1441},
+  issn = {0024-3590, 1939-5590},
+  doi = {10.1002/lno.11125},
+  urldate = {2024-01-11},
+  abstract = {Glaciers along the western Antarctic Peninsula are retreating at unprecedented rates, opening up sublittoral rocky substrate for colonization by marine organisms such as macroalgae. When macroalgae are physically detached due to storms or erosion, their fragments can accumulate in seabed hollows, where they can be grazed upon by herbivores or be degraded microbially or be sequestered. To understand the fate of the increasing amount of macroalgal detritus in Antarctic shallow subtidal sediments, a mesocosm experiment was conducted to track 13C- and 15N-labeled macroalgal detritus into the benthic bacterial, meiofaunal, and macrofaunal biomass and respiration of sediments from Potter Cove (King George Island). We compared the degradation pathways of two macroalgae species: one considered palatable for herbivores (the red algae Palmaria decipiens) and other considered nonpalatable for herbivores (the brown algae Desmarestia anceps). The carbon from Palmaria was recycled at a higher rate than that of Desmarestia, with herbivores such as amphipods playing a stronger role in the early degradation process of the Palmaria fragments and the microbial community taking over at a later stage. In contrast, Desmarestia was more buried in the subsurface sediments, stimulating subsurface bacterial degradation. Macrofauna probably relied indirectly on Desmarestia carbon, recycled by bacteria and microphytobenthos. The efficient cycling of the nutrients and carbon from the macroalgae supports a positive feedback loop among bacteria, microphytobenthos, and meiofaunal and macrofaunal grazers, resulting in longer term retention of macroalgal nutrients in the sediment, hence creating a food bank for the benthos.},
+  langid = {english},
+  file = {/Users/leonardosaravia/Zotero/storage/WNSAV2DF/Braeckman et al. - 2019 - Degradation of macroalgal detritus in shallow coas.pdf}
+}
+
 @article{Braeckman2021,
   title = {Glacial Melt Disturbance Shifts Community Metabolism of an {{Antarctic}} Seafloor Ecosystem from Net Autotrophy to Heterotrophy},
   author = {Braeckman, Ulrike and Pasotti, Francesca and Hoffmann, Ralf and V{\'a}zquez, Susana and Wulff, Angela and Schloss, Irene R. and Falk, Ulrike and Deregibus, Dolores and Lefaible, Nene and Torstensson, Anders and {Al-Handal}, Adil and Wenzh{\"o}fer, Frank and Vanreusel, Ann},
@@ -534,6 +551,18 @@
   urldate = {2023-08-14},
   abstract = {Abstract             Climate change-induced glacial melt affects benthic ecosystems along the West Antarctic Peninsula, but current understanding of the effects on benthic primary production and respiration is limited. Here we demonstrate with a series of in situ community metabolism measurements that climate-related glacial melt disturbance shifts benthic communities from net autotrophy to heterotrophy. With little glacial melt disturbance (during cold El Ni{\~n}o spring 2015), clear waters enabled high benthic microalgal production, resulting in net autotrophic benthic communities. In contrast, water column turbidity caused by increased glacial melt run-off (summer 2015 and warm La Ni{\~n}a spring 2016) limited benthic microalgal production and turned the benthic communities net heterotrophic. Ongoing accelerations in glacial melt and run-off may steer shallow Antarctic seafloor ecosystems towards net heterotrophy, altering the metabolic balance of benthic communities and potentially impacting the carbon balance and food webs at the Antarctic seafloor.},
   langid = {english}
+}
+
+@article{Braeckman2024,
+  title = {Glacial Melt Impacts Carbon Flows in an {{Antarctic}} Benthic Food Web},
+  author = {Braeckman, Ulrike and Soetaert, Karline and Pasotti, Francesca and Quartino, Maria Liliana and Vanreusel, Ann and Saravia, Leonardo A. and Schloss, Irene R. and Van Oevelen, Dick},
+  year = {2024},
+  month = mar,
+  journal = {Frontiers in Marine Science},
+  volume = {11},
+  doi = {10.3389/fmars.2024.1359597},
+  langid = {english},
+  file = {/Users/leonardosaravia/Zotero/storage/ALFQIYGB/Braeckman - Glacial melt impacts carbon flows in an Antarctic .pdf}
 }
 
 @article{Braithwaite2015,
@@ -1037,6 +1066,25 @@
   doi = {10.1675/063.037.0408},
   urldate = {2023-07-13},
   langid = {english}
+}
+
+@incollection{David2017,
+  title = {Chapter {{One}} - {{Impacts}} of {{Invasive Species}} on {{Food Webs}}: {{A Review}} of {{Empirical Data}}},
+  shorttitle = {Chapter {{One}} - {{Impacts}} of {{Invasive Species}} on {{Food Webs}}},
+  booktitle = {Advances in {{Ecological Research}}},
+  author = {David, P. and Th{\'e}bault, E. and Anneville, O. and Duyck, P. -F. and Chapuis, E. and Loeuille, N.},
+  editor = {Bohan, David A. and Dumbrell, Alex J. and Massol, Fran{\c c}ois},
+  year = {2017},
+  month = jan,
+  series = {Networks of {{Invasion}}: {{A Synthesis}} of {{Concepts}}},
+  volume = {56},
+  pages = {1--60},
+  publisher = {Academic Press},
+  doi = {10.1016/bs.aecr.2016.10.001},
+  urldate = {2024-04-18},
+  abstract = {We review empirical studies on how bioinvasions alter food webs and how a food-web perspective may change their prediction and management. Predation is found to underlie the most spectacular damage in invaded systems, sometimes cascading down to primary producers. Indirect trophic effects (exploitative and apparent competition) also affect native species, but rarely provoke extinctions, while invaders often have positive bottom-up effects on higher trophic levels. As a result of these trophic interactions, and of nontrophic ones such as mutualisms or ecosystem engineering, invasions can profoundly modify the structure of the entire food web. While few studies have been undertaken at this scale, those that have highlight how network properties such as species richness, phenotypic diversity, and functional diversity, limit the likelihood and impacts of invasions by saturating niche space. Vulnerable communities have unsaturated niche space mainly because of evolutionary history in isolation (islands), dispersal limitation, or anthropogenic disturbance. Evolution also modulates the insertion of invaders into a food web. Exotics and natives are evolutionarily new to one another, and invasion tends to retain alien species that happen to have advantage over residents in trophic interactions. Resident species, therefore, often rapidly evolve traits to better tolerate or exploit invaders---a process that may eventually restore more balanced food webs and prevent extinctions. We discuss how network-based principles might guide management policies to better live with invaders, rather than to undertake the daunting (and often illusory) task of eradicating them one by one.},
+  keywords = {Apparent competition,Biological control,Biological invasion,Community diversity,Competition,Food web,Network,Predation,Trophic level},
+  file = {/Users/leonardosaravia/Zotero/storage/G4YBI9BX/S0065250416300502.html}
 }
 
 @incollection{Dayton1990,
@@ -4203,6 +4251,20 @@
   langid = {english},
   keywords = {Anthropogenic activities,Climate change,Food web,Marine ecosystems,Sub-Antarctic,West Antarctic Peninsula},
   file = {/Users/leonardosaravia/Zotero/storage/7NCCT4VN/Rodriguez et al. - 2022 - Marine food webs are more complex but less stable .pdf}
+}
+
+@article{Rodriguez2024,
+  title = {Potter {{Cove}}'s {{Heavyweights}}: {{Estimation}} of Species' Interaction Strength of an {{Antarctic}} Food Web},
+  shorttitle = {Potter {{Cove}}'s {{Heavyweights}}},
+  author = {Rodriguez, Iara Diamela and Saravia, Leonardo A.},
+  year = {2024},
+  month = mar,
+  publisher = {EcoEvoRxiv},
+  urldate = {2024-04-18},
+  abstract = {Understanding the complex interplay between structure and stability of marine food webs is crucial for assessing ecosystem resilience, particularly in the context of ongoing environmental changes. In the West Antarctic Peninsula, global warming has led to severe alterations in community composition, species distribution, and abundance over the last decades. In this study, we estimate the interaction strength within the Potter Cove (South Shetland Islands, Antarctica) food web to elucidate the roles of species in its structure and functioning. We use these estimates to calculate food web stability in response to perturbations, conducting sequential extinctions to quantify the importance of individual species based on changes in stability and food web fragmentation. We explore connections between interaction strength and key topological properties of the food web. Our findings reveal an asymmetric distribution of interaction strengths, with a prevalence of weak interactions and a few strong ones. Species exerting greater influence within the food web displayed higher degree and trophic similarity but occupied lower trophic levels and displayed lower omnivory levels (e.g., macroalgae and detritus). Extinction simulations revealed the key role of certain species, particularly amphipods and the black rockcod Notothenia coriiceps, as their removal led to significant changes in food web stability and network fragmentation. This study highlights the importance of considering species interaction strengths in assessing the stability of polar marine ecosystems. These insights have crucial implications for guiding monitoring and conservation strategies aimed at preserving the integrity of Antarctic marine ecosystems.},
+  copyright = {CC BY Attribution 4.0 International},
+  langid = {english},
+  file = {/Users/leonardosaravia/Zotero/storage/7WZ4QATB/Rodriguez and Saravia - 2024 - Potter Cove’s Heavyweights Estimation of species’.pdf}
 }
 
 @article{Rossi2019,
