--- a/manuscript.tex
+++ b/manuscript.tex
@@ -38,7 +38,6 @@
 \usepackage{xcolor}
 \usepackage[vmargin=1in,hmargin=1in]{geometry}
 \usepackage{longtable,booktabs,array}
-\usepackage{multirow}
 \usepackage{calc} % for calculating minipage widths
 % Correct order of tables after \paragraph or \subparagraph
 \usepackage{etoolbox}
@@ -229,8 +228,6 @@ additional data and analyses are needed to gain insights into the
 stressors' effects on food web properties in the Southwest Atlantic to
 Antarctic region.
 
-\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
-
 \subsection{2. Assessment of the food web structure and stressors in the
 Southwest Atlantic - Antarctic
 region}\label{assessment-of-the-food-web-structure-and-stressors-in-the-southwest-atlantic---antarctic-region}
@@ -321,8 +318,8 @@ were obtained from www.ign.gob.ar.}
 San Jorge Gulf is the northernmost study area considered in this review
 (Figure 1), located from Cabo dos Bahias (44°55'S) to Cabo tres Puntas
 (47°06'S). It is a partially enclosed basin spanning approximately
-34,000 km\^{}2 and \textasciitilde100 m of maximum depths. The gulf's
-productivity supports large invertebrate and vertebrate fisheries
+34,000 \(\text{km}^2\) and \textasciitilde100 m of maximum depths. The
+gulf's productivity supports large invertebrate and vertebrate fisheries
 (Góngora et al. 2012), as well as marine mammal and seabird populations
 (Yorio 2009). Two prominent frontal systems meet in the shallower
 northern and southern ends of the gulf (with depths \textasciitilde40
@@ -403,8 +400,8 @@ otters (Garrott et al. 1993) and macroalgae (Southward and Southward
 Located at a more southern latitude (\textasciitilde54ºS, 68ºW), the
 Beagle Channel (Figure 1) is an interoceanic passage at the southernmost
 tip of South America, spanning 240 km in length and 5 km in width
-(\textasciitilde1200 km\^{}2), with a depth range of 0 - 140 m. It
-features complex coastlines, varying bathymetry, a prevailing
+(\textasciitilde1200 \(\text{km}^2\)), with a depth range of 0 - 140 m.
+It features complex coastlines, varying bathymetry, a prevailing
 west-to-east circulation pattern, and a significant longitudinal
 gradient of glacial freshwater discharge (Schloss et al. 2023). Bruno et
 al. (2023) suggests that locally produced suspended particulate organic
@@ -424,28 +421,31 @@ lobster \emph{G. gregaria} (Riccialdelli et al. 2020). Moreover, the
 squat lobster has been identified as a species linking food web modules
 and connecting the entire food web (Rodriguez et al. 2022).
 
-A main local stressor in the Beagle Channel is the introduction of
-invasive species (Table 2). Salmonidae were introduced to Tierra del
-Fuego in the 1930s. Especially, the Chinook salmon \emph{Oncorhynchus
-tshawytscha} causes concern. The detection of this species in Tierra del
-Fuego dates back to April 2006, and its population has been expanding
-since then (Nardi et al. 2019). Being a top predator, the Chinook salmon
-can compete for resources with several native predators in the Beagle
-Channel (Correa and Gross 2008), but also prey on them. This is the case
-for Notothenioids (\emph{Eleginops maclovinus}, \emph{Patagonotothen
-tessellata}, \emph{P. cornucola}, \emph{P. sima}, \emph{Paranotothenia
-magellanica}, \emph{Harpagifer bispinis}), the Atherinidae
-\emph{Odontesthes smitti} and \emph{O. nigricans}, the Fuegian sprat,
-and larvae of king crabs (\emph{Lithodes antarcticus} and
-\emph{Paralomis granulosa}) (Fernández et al. 2010). Ciancio et al.
-(2008) observed that Chinook salmon primarily feeds on sprats in the
-Southern Patagonian Shelf Ecosystem area and display trophic levels
-comparable to those of intermediate-sized fish and cephalopod predator
-species, showing significant dietary overlap with the Magellanic penguin
-\emph{Spheniscus magellanicus}. Another potential competitor for Chinook
-salmon in the Beagle Channel, sharing a similar diet, is the native
-Commerson's dolphin \emph{Cephalorhynchus commersonii} (Riccialdelli et
-al. 2013). In the Beagle Channel, other stressors include contaminants
+One of the main local stressors in the Beagle Channel is the
+introduction of invasive species (Table 2). Salmonidae were introduced
+to Tierra del Fuego in the 1930s. Especially, the Chinook salmon
+\emph{Oncorhynchus tshawytscha} causes concern. The detection of this
+species in Tierra del Fuego dates back to April 2006, and its population
+has been expanding since then (Nardi et al. 2019). Being a top predator,
+the Chinook salmon can compete for resources with several native
+predators in the Beagle Channel (Correa and Gross 2008), but also prey
+on them. This is the case for Notothenioids (\emph{Eleginops
+maclovinus}, \emph{Patagonotothen tessellata}, \emph{P. cornucola},
+\emph{P. sima}, \emph{Paranotothenia magellanica}, \emph{Harpagifer
+bispinis}), the Atherinidae \emph{Odontesthes smitti} and \emph{O.
+nigricans}, the Fuegian sprat, and larvae of king crabs (\emph{Lithodes
+antarcticus} and \emph{Paralomis granulosa}) (Fernández et al. 2010).
+Ciancio et al. (2008) observed that Chinook salmon primarily feeds on
+sprats in the Southern Patagonian Shelf Ecosystem area and display
+trophic levels comparable to those of intermediate-sized fish and
+cephalopod predator species, showing significant dietary overlap with
+the Magellanic penguin \emph{Spheniscus magellanicus}. Another potential
+competitor for Chinook salmon in the Beagle Channel, sharing a similar
+diet, is the native Commerson's dolphin \emph{Cephalorhynchus
+commersonii} (Riccialdelli et al. 2013). In invaded ecosystems,
+predation emerges as the primary driver of significant damage, often
+leading to cascading effects impacting even primary producers (David et
+al. 2017). In the Beagle Channel, other stressors include contaminants
 like metals, perfluorinated compounds, hydrocarbons, and microplastics
 found in animal tissue (algae, mussel, fish, and guano) and sediments
 (Duarte et al. 2011; Llorca et al. 2012). Carbon and carbohydrate levels
@@ -461,17 +461,17 @@ chilensis} and the sea snail \emph{Nacella magellanica}, respectively.
 These studies link pollutants to port and industrial activities of
 Ushuaia; we therefore expect the area of the Beagle Channel closest to
 the city to be the most affected by contaminants. Contaminants
-potentially spread through the food web, magnifying the risk to higher
-trophic level taxa. In the Beagle Channel and Atlantic coast of Tierra
-del Fuego food webs mercury concentrations rose with benthivory, and
-higher mercury was found in phytoplankton and the squat lobster. This
-latter species connects pelagic and benthic habitats, so any disruption
-to them could disrupt the food web (Rodriguez et al. 2022). Dodino et
-al. (2022) found the highest mercury levels in Magellanic penguin
-feathers from offshore colonies in Tierra del Fuego. Recently, Ushuaia's
-kelp forests have also seen changes in composition along with a decrease
-in biodiversity as a result of urban pollution (Kaminsky et al. 2023).
-It is important to note that sea warming might be a less significant
+potentially spread through the food web, from lower to higher trophic
+level taxa. In the Beagle Channel and Atlantic coast of Tierra del Fuego
+food webs mercury concentrations rose with benthivory, and higher
+mercury was found in phytoplankton and the squat lobster. This latter
+species connects pelagic and benthic habitats, so any disruption to them
+could disrupt the food web (Rodriguez et al. 2022). Dodino et al. (2022)
+found the highest mercury levels in Magellanic penguin feathers from
+offshore colonies in Tierra del Fuego. Recently, Ushuaia's kelp forests
+have also seen changes in composition along with a decrease in
+biodiversity as a result of urban pollution (Kaminsky et al. 2023). It
+is important to note that sea warming might be a less significant
 stressor in the Beagle Channel compared to the other areas, as global
 warming is melting glaciers and the influx of cold freshwater is
 actually slightly cooling the seawater (Saraceno et al. 2022).
@@ -487,8 +487,8 @@ features in the plateau are fairly stable, with salinity averaging 34
 all year round and temperature ranging between 4 and 8ºC (Acha et al.
 2004). The plateau is surrounded by steep flanks of up to 4000 m depth,
 protected by the Marine Protected Area Namuncurá - Burdwood Bank II
-(32,000 km\^{}2). Intense upwelling and mixing occur in relation to the
-slope, entraining deep nutrient-rich waters into the photic layer
+(32,000 \(\text{km}^2\)). Intense upwelling and mixing occur in relation
+to the slope, entraining deep nutrient-rich waters into the photic layer
 (Matano et al. 2019), and resulting in a fairly homogeneous water column
 both spatially and temporally (Matano et al. 2019).
 
@@ -561,10 +561,10 @@ trophic interactions in Burdwood Bank are also unknown.
 The Scotia Sea is a deep-sea basin (\textasciitilde48 - 58ºS, 50ºW),
 delimited by the Drake Passage to the West and by the island complex of
 the Scotia Arc to the North, East, and South, with an approximate
-extension of 1.5 x 106 km\^{}2 and a depth range of 0 - 3000 m (Murphy
-et al. 2006) (Figure 1). Its oceanography is dominated by the Antarctic
-Circumpolar Current, which is spatially structured by frontal systems
-(Whitworth 1980). The South Antarctic Circumpolar Current Front
+extension of 1.5 x 106 \(\text{km}^2\) and a depth range of 0 - 3000 m
+(Murphy et al. 2006) (Figure 1). Its oceanography is dominated by the
+Antarctic Circumpolar Current, which is spatially structured by frontal
+systems (Whitworth 1980). The South Antarctic Circumpolar Current Front
 subdivides the Scotia Sea into two biogeographic regions: the Northern
 Scotia Sea, characterized by higher and more variable temperatures, and
 the Southern Scotia Sea, characterized by lower and more stable
@@ -599,7 +599,7 @@ the Antarctic continental shelf (`Southern Scotia Sea') (Soeffker et al.
 2022). Recently, Trathan (2023) has identified several concerns
 regarding aspects of these fisheries, highlighting that it is crucial to
 recognize ongoing changes such as the recovery of baleen whales and
-climate change. These factors increase uncertainty for fisheries
+climate change. These factors increase the uncertainty for fishery
 managers, necessitating direct consideration in the management of
 harvested and dependent species.
 
@@ -630,21 +630,21 @@ concurrent rise in mercury exposure (Seco et al. 2021).
 \subsubsection{2.5 Potter Cove
 (Antarctica)}\label{potter-cove-antarctica}
 
-In the Antarctic realm, Potter Cove is a \textasciitilde9 km2 fjord with
-a depth range of 0 - 200 m located at 25 de Mayo/King George Island
-(62°S, 58°W) on the South Shetland Islands of the West Antarctic
-Peninsula (Figure 1). The cove, bordered by the Fourcade Glacier, is
-divided into three areas: a) the internal cove, a high
-glacier-influenced, soft sediment zone with a 50 m maximum depth; b) the
-central cove, a mixed substrate area with low meltwater influence and an
-80 m maximum depth; and c) the external cove, ice-free for 60 years with
-a 185 m maximum depth and rocky substrate (Jerosch et al. 2018). Potter
-Cove's high-latitude location results in variable environmental
-conditions due to photoperiod length seasonality. Sea ice often covers
-this area in winter (Schloss et al. 2012). With low phytoplankton
-biomass, macroalgae, and microphytobenthos are likely the primary food
-sources for secondary benthic production (Quartino and Boraso de Zaixso
-2008).
+In the Antarctic realm, Potter Cove is a \textasciitilde9
+\(\text{km}^2\) fjord with a depth range of 0 - 200 m located at 25 de
+Mayo/King George Island (62°S, 58°W) on the South Shetland Islands of
+the West Antarctic Peninsula (Figure 1). The cove, bordered by the
+Fourcade Glacier, is divided into three areas: a) the internal cove, a
+high glacier-influenced, soft sediment zone with a 50 m maximum depth;
+b) the central cove, a mixed substrate area with low meltwater influence
+and an 80 m maximum depth; and c) the external cove, ice-free for 60
+years with a 185 m maximum depth and rocky substrate (Jerosch et al.
+2018). Potter Cove's high-latitude location results in variable
+environmental conditions due to photoperiod length seasonality. Sea ice
+often covers this area in winter (Schloss et al. 2012). With low
+phytoplankton biomass, macroalgae, and microphytobenthos are likely the
+primary food sources for secondary benthic production (Quartino and
+Boraso de Zaixso 2008).
 
 The Potter Cove food web includes 110 nodes and 649 interactions, and a
 connectance of 0.05 (Table 1). It presents an asymmetric degree
@@ -775,7 +775,7 @@ disturbance and distribution pattern occurs roughly every 200 square
 meters on the Antarctic continental shelf. Global warming is predicted
 to increase iceberg scouring frequency (Gutt 2001; Smale et al. 2008),
 disrupting the environment (Smale and Barnes 2008) with the potential
-for tipping points (Gutt et al. 2015). \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
+for tipping points (Gutt et al. 2015).
 
 \newpage
 \footnotesize
@@ -935,7 +935,6 @@ study area (`In situ') or in another area (`Elsewhere').
 \endfoot
 \hline
 \endlastfoot
-
 \textbf{San Jorge Gulf} & & & & & \\
 & Sea warming & Fish assemblage \& its prey & Distribution & In situ &
 Galván et al. (2022) \\
@@ -1132,43 +1131,45 @@ degree and mid-trophic position.
 In Potter Cove, a fjord-like Antarctic ecosystem, the repercussions of
 climate change extend across numerous species. Noteworthy, these effects
 are non-uniform within the food web, manifesting differently across its
-various compartments (Cordone et al. 2020; Rodriguez et al. 2022).
-Potter Cove has recently experienced frequent events of marine
-heatwaves, i.e., prolonged periods of anomalously high sea surface
-temperature (Oliver et al. 2018; Latorre et al. 2023). This has led to
-decreases in biomasses of different planktonic functional groups (Garcia
-et al. 2019; Latorre et al. 2023). Given the relatively low abundance of
-phytoplankton and zooplankton's low mean degree, resulting in weak
-interaction strengths between these low trophic levels and higher ones
-(\textbf{Rodriguez2024?}), added to the modular configuration of the
-food web (Rodriguez et al. 2022), we hypothesize that changes in these
-nodes due to warming will be retained at the basal level of the pelagic
-compartment and will not expand to higher trophic levels. Benthic
-primary producers in Potter Cove are being influenced by the decrease in
-winter sea ice cover (higher light availability), the increased levels
-of sediments in the water column due to glacial melt run-off (lower
-light penetration) and the newly free-ice areas available for
-colonization associated to glacier retreat. The overall local effect of
-climate change on macroalgae is a net increase in their production
-(Deregibus et al. 2023). It has been proposed that larger diversity in
-primary producers can support a more diverse food web with more
+pelagic and benthic compartments. Potter Cove has recently experienced
+frequent events of marine heatwaves, i.e., prolonged periods of
+anomalously high sea surface temperature (Oliver et al. 2018; Latorre et
+al. 2023). This has led to decreases in biomasses of different
+planktonic functional groups (Garcia et al. 2019; Latorre et al. 2023).
+Given the relatively low abundance of phytoplankton and zooplankton low
+mean degree (Table S1), resulting in weak interaction strengths between
+these low trophic levels and higher ones (Rodriguez and Saravia 2024),
+added to the modular configuration of the food web (Rodriguez et al.
+2022), we hypothesize that changes in these nodes due to warming will be
+retained at the lower trophic levels of the pelagic compartment and will
+not expand to higher trophic levels. Macroalgae, important benthic
+primary producers, are being influenced by the decrease in winter sea
+ice cover (higher light availability), the increased levels of sediments
+in the water column due to glacial melt run-off (lower light
+penetration) and the newly free-ice areas available for colonization
+associated to glacier retreat. The local effect of climate change on
+macroalgae is a net increase in their production and macroalgal detritus
+(Braeckman et al. 2019; Deregibus et al. 2023; Iken et al. 2023). On the
+other hand, increased glacial runoff lead to a decrease in net primary
+production of benthic microalgae (Hoffmann et al. 2019); reduced
+secondary benthic production; changes on the benthic community
+composition and an expansion of its distribution towards newly free-ice
+areas, specially filter and deposit feeders species (Sahade et al. 2015;
+Pasotti et al. 2015; Braeckman et al. 2024). In an increasing glacial
+melt disturbance scenario, it's expected a shift in the food sources of
+benthic species towards grazing on macroalgal and their detritus
+(Braeckman et al. 2024). It has been proposed that larger diversity in
+primary sources can support a more diverse food web with more
 specialized consumers (Iken et al. 2023). Given the high relative
 abundance and the high degree of the macroalgae functional group (Table
-S1), we expect a longer hard bottom food web (i.e., number of
-interactions connecting low and high-trophic levels), wider consumer
-trophic niches, and a more stable benthic food web as sea ice cover
-decreases and glaciers retreat due to global warming. In soft bottom
-areas of the cove, multiple food web nodes are being affected by ongoing
-warming effects: decrease in net primary production of benthic
-microalgae (Hoffmann et al. 2019), and changes in the benthic community
-biomass, distribution and composition (Sahade et al. 2015; Pasotti et
-al. 2015). Given that the Potter Cove food web has low connectance and
-omnivory, we suggest fragility and potential trophic cascade effects
-(Marina et al. 2018), especially between species of the soft bottom
-compartment (Table 3). Overall, we anticipate significant shifts in
-energy fluxes, rather than alterations in the overall structure of the
-Potter Cove food web, with strengthening of connections within
-compartments.
+S1), we expect a longer benthic food web (i.e., number of interactions
+connecting low and high-trophic levels), wider consumer trophic niches,
+meaning an increase in omnivory, and a more stable benthic food web as
+sea ice cover decreases and glaciers retreat due to global warming. As a
+net effect of climate change on the overall Potter Cove food web, we
+expect a significant shift in energy fluxes, rather than drastic
+alterations in the topological structure, affecting the transfer of
+energy from lower to higher trophic levels.
 
 \paragraph{3.1.4 Weddell Sea
 (Antarctica)}\label{weddell-sea-antarctica-1}
@@ -1187,16 +1188,17 @@ their distributions. The projected rise in iceberg scouring is expected
 to significantly alter the biomass and community structure of
 macrobenthos, which in turn will impact mid-trophic level predators such
 as demersal fish (Gutt 2001; Mintenbeck et al. 2012). While we do not
-anticipate large-scale topological changes in the mean food web
-attributes, local extinctions could lead to such changes, particularly
-affecting benthic species (Gutt and Piepenburg 2003). Given that the
-impacted species---whether individually like krill, or collectively like
-macrobenthos and notothenioids (e.g., \emph{P. antarcticum})---present a
-mid-trophic position, high population biomasses and high degree (Table
-S1), we hypothesize that significant shifts in energy fluxes will occur
-(Table 3). Additionally, the food web's low proportion of omnivores
-suggests reduced system resilience (Table 1), increasing the likelihood
-of regime changes (Gutt et al. 2015).
+anticipate large-scale topological changes affecting mean food web
+attributes, local extinctions may produce changes in the interactions,
+especially impacting benthic species (Gutt and Piepenburg 2003). Given
+that the impacted species---whether individually like krill, or
+collectively like macrobenthos and notothenioids (e.g., \emph{P.
+antarcticum})---present a mid-trophic position, high population
+biomasses and high degree (Table S1), we hypothesize that significant
+shifts in energy fluxes will occur (Table 3). Additionally, the food
+web's low proportion of omnivores suggests reduced system resilience
+(Table 1), increasing the likelihood of regime changes (Gutt et al.
+2015).
 
 \paragraph{3.1.5 Beagle Channel and Burdwood
 Bank}\label{beagle-channel-and-burdwood-bank}
@@ -1244,64 +1246,58 @@ main stressors reported for each study area. *Industrial trawl fishery
 ceased in 2015 remaining artisanal trawling activity.
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2759}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2644}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2759}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.1609}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.3333}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.3194}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.3333}}@{}}
 \toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+\textbf{Study area}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\textbf{Stressor}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\textbf{Hypothesis on food web effects}
+\end{minipage} \\
+\midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-\multirow{2}{=}{\textbf{Study area}
-
-======================= \textbf{San Jorge Gulf}} &
-\multirow{2}{=}{\textbf{Stressor}
-
-======================} &
-\multicolumn{2}{>{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.4368} + 2\tabcolsep}@{}}{%
-\multirow{2}{=}{\textbf{Hypothesis on food web effects} \textbar{}
-=======================+ \textbar{}}} \\
- \\
+\textbf{San Jorge Gulf} & & \\
 & Fishery* & ↑ FW connectance
 
 ↓ FW stability
 
-↓ functional diversity & \\
+↓ functional diversity \\
 & Sea warming & Shifts in FW topology
 
 ↑ FW connectance
 
-↑ functional diversity & \\
-\textbf{Beagle Channel} & & & \\
+↑ functional diversity \\
+\textbf{Beagle Channel} & & \\
 & Alien species & Shifts in FW topology
 
-↑ spread of perturbations & \\
-\textbf{Burdwood Bank} & & & \\
+↑ spread of perturbations \\
+\textbf{Burdwood Bank} & & \\
 & Fishery & Shifts in main energy fluxes
 
-↓ FW stability & \\
-\textbf{Scotia Sea} & & & \\
+↓ FW stability \\
+\textbf{Scotia Sea} & & \\
 & Sea warming & ↑ FW connectance
 
 ↓ FW modularity
 
 ↓ energy transfer to high TLs
 
-↑ spread of perturbation & \\
-\textbf{Potter Cove (Antarctica)} & & & \\
-& Sea warming & ↓ perturbation spreading & \\
-& Sea ice decline + glacial retreat & Differential impacts, by
-substrate: hard (HS) or soft (SS)
-
-↑ FW chain length \& ↑ trophic niches (HS)
-
-↑ FW fragility \& trophic cascades (SS) & \\
-\textbf{Weddell Sea (Antarctica)} & & & \\
+↑ spread of perturbation \\
+\textbf{Potter Cove (Antarctica)} & & \\
+& Sea warming & ↓ perturbation spreading \\
+& Sea ice decline + glacial retreat & ↑ FW chain length \& \textbar{} ↑
+trophic niches \textbar{} \\
+\textbf{Weddell Sea (Antarctica)} & & \\
 & Sea ice decline + iceberg scouring & Shifts in main energy fluxes
 
 ↑ likelihood of regime shifts
 
-↓ resilience & \\
+↓ resilience \\
 \end{longtable}
 
 \normalsize
@@ -1372,10 +1368,10 @@ could be applied to our food web study cases.
 In this review, we proposed a series of alternative hypotheses on how
 global stressors may affect food webs in the Southwest Atlantic to
 Southern Ocean. Despite being qualitative, this is a first important
-step in synthesizing food webs and stressor effects on food webs for
-this region. These qualitative assessments must be complemented with
-further investigations that test their validity. To achieve this, we
-suggest using a combination of observational data such as reported
+step in synthesizing food webs and stressor effects on species and food
+webs for this region. These qualitative assessments must be complemented
+with further investigations that test their validity. To achieve this,
+we suggest using a combination of observational data such as reported
 biomass changes and historic records of sea temperature for the region
 (e.g., Laptikhovsky et al. 2013; Funes et al. 2019; Franco et al. 2020b;
 Winter and Arkhipkin 2023), and food web modeling methods such as
@@ -1389,7 +1385,7 @@ We reviewed global change stressors acting in six different areas along
 a large-scale latitudinal gradient from temperate Atlantic to cold
 Antarctic ecosystems. Using a theoretical framework that combines
 species and food web-level data, we suggest how warming effects may
-impact food web structure and functioning. Besides there is an important
+impact food web structure and functioning. Apart from an important
 amount of uncertainty, these qualitative predictions are intended to
 serve as the basis for future studies in marine ecosystems of the
 Southern Hemisphere that aim at quantifying the magnitude of these
@@ -1547,6 +1543,21 @@ ecosystem from net autotrophy to heterotrophy. Communications Biology
 \textbf{4}(1): 148.
 doi:\href{https://doi.org/10.1038/s42003-021-01673-6}{10.1038/s42003-021-01673-6}.
 
+\bibitem[\citeproctext]{ref-Braeckman2019}
+Braeckman, U., Pasotti, F., Vázquez, S., Zacher, K., Hoffmann, R.,
+Elvert, M., Marchant, H., Buckner, C., Quartino, M.L., Mác Cormack, W.,
+Soetaert, K., Wenzhöfer, F., and Vanreusel, A. 2019. Degradation of
+macroalgal detritus in shallow coastal {Antarctic} sediments. Limnology
+and Oceanography \textbf{64}(4): 1423--1441.
+doi:\href{https://doi.org/10.1002/lno.11125}{10.1002/lno.11125}.
+
+\bibitem[\citeproctext]{ref-Braeckman2024}
+Braeckman, U., Soetaert, K., Pasotti, F., Quartino, M.L., Vanreusel, A.,
+Saravia, L.A., Schloss, I.R., and Van Oevelen, D. 2024. Glacial melt
+impacts carbon flows in an {Antarctic} benthic food web. Frontiers in
+Marine Science \textbf{11}.
+doi:\href{https://doi.org/10.3389/fmars.2024.1359597}{10.3389/fmars.2024.1359597}.
+
 \bibitem[\citeproctext]{ref-Braithwaite2015}
 Braithwaite, J.E., Meeuwig, J.J., Letessier, T.B., Jenner, K.C.S., and
 Brierley, A.S. 2015. From sea ice to blubber: Linking whale condition to
@@ -1666,13 +1677,6 @@ diverse diet for the invasive green crab in {Atlantic Patagonia}.
 Biological Invasions \textbf{24}(2): 505--526.
 doi:\href{https://doi.org/10.1007/s10530-021-02659-5}{10.1007/s10530-021-02659-5}.
 
-\bibitem[\citeproctext]{ref-Cordone2020}
-Cordone, G., Salinas, V., Marina, T.I., Doyle, S.R., Pasotti, F.,
-Saravia, L.A., and Momo, F.R. 2020. Green vs brown food web: {Effects}
-of habitat type on multidimensional stability proxies for a
-highly-resolved {Antarctic} food web. Food Webs \textbf{25}: e00166.
-doi:\href{https://doi.org/10.1016/j.fooweb.2020.e00166}{10.1016/j.fooweb.2020.e00166}.
-
 \bibitem[\citeproctext]{ref-Correa2008}
 Correa, C., and Gross, M.R. 2008. Chinook salmon invade southern {South
 America}. Biological Invasions \textbf{10}(5): 615--639.
@@ -1693,6 +1697,14 @@ ecosystem stressors and their importance in conservation. Proceedings of
 the Royal Society B: Biological Sciences \textbf{283}(1824): 20152592.
 Royal Society.
 doi:\href{https://doi.org/10.1098/rspb.2015.2592}{10.1098/rspb.2015.2592}.
+
+\bibitem[\citeproctext]{ref-David2017}
+David, P., Thébault, E., Anneville, O., Duyck, P.-F., Chapuis, E., and
+Loeuille, N. 2017. Chapter {One} - {Impacts} of {Invasive Species} on
+{Food Webs}: {A Review} of {Empirical Data}. \emph{In} Advances in
+{Ecological Research}. \emph{Edited by} D.A. Bohan, A.J. Dumbrell, and
+F. Massol. Academic Press. pp. 1--60.
+doi:\href{https://doi.org/10.1016/bs.aecr.2016.10.001}{10.1016/bs.aecr.2016.10.001}.
 
 \bibitem[\citeproctext]{ref-Deppeler2020}
 Deppeler, S., Schulz, K.G., Hancock, A., Pascoe, P., McKinlay, J., and
@@ -2596,6 +2608,11 @@ Marine food webs are more complex but less stable in sub-{Antarctic}
 {Antarctic Peninsula}) regions. Marine Environmental Research
 \textbf{174}: 105561.
 doi:\href{https://doi.org/10.1016/j.marenvres.2022.105561}{10.1016/j.marenvres.2022.105561}.
+
+\bibitem[\citeproctext]{ref-Rodriguez2024}
+Rodriguez, I.D., and Saravia, L.A. 2024. Potter {Cove}'s {Heavyweights}:
+{Estimation} of species' interaction strength of an {Antarctic} food
+web. EcoEvoRxiv. {[}accessed 18 April 2024{]}.
 
 \bibitem[\citeproctext]{ref-Rowlands2021}
 Rowlands, E., Galloway, T., Cole, M., Lewis, C., Peck, V., Thorpe, S.,
